fix(icon-list): highlight styling bleeding into normal

--- a/express/blocks/icon-list/icon-list.css
+++ b/express/blocks/icon-list/icon-list.css
@@ -28,10 +28,11 @@ main .icon-list .icon-list-image {
   flex: 0 0 48px;
 }
 
-main .icon-list .icon, main .icon-list .icon-list-image img {
+main .icon-list .icon,
+main .icon-list .icon-list-image img {
   fill: currentColor;
-  width: 40px;
-  height: 40px;
+  width: 44px;
+  height: 44px;
 }
 
 main .icon-list h3, main .icon-list h4 {
@@ -119,7 +120,7 @@ main .icon-list .icon-list-regular .icon-list-description p {
   margin: 0;
 }
 
-main .icon-list .icon-list-regular .icon-list-image {
+main .icon-list.highlight .icon-list-regular .icon-list-image {
   flex: 0 0 73px;
   line-height: 0;
 }
@@ -130,7 +131,8 @@ main .icon-list .icon-list-regular .icon-list-description {
   align-self: top;
 }
 
-main .icon-list .icon-list-regular .icon-list-image img, main .icon-list .icon-list-regular .icon-list-image svg {
+main .icon-list.highlight .icon-list-regular .icon-list-image img,
+main .icon-list.highlight .icon-list-regular .icon-list-image svg {
   fill: currentColor;
   width: 73px;
   height: 72px;
